* Invalid XHTML (GenericControls template)  * Custom verification questions weren't properly aligned except in Curve (Core index.css, compat.css) [Bug 4212]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9787 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/core/css/index.css
+++ b/Themes/core/css/index.css
@@ -1865,11 +1865,6 @@ ul.postingbuttons li
 	margin-bottom: .5em;
 }
 
-#verification_control, #verification_control .smalltext
-{
-	display: inline;
-}
-
 #quickReplyWarning
 {
 	width: 20%;
