--- a/Themes/default/css/compat.css
+++ b/Themes/default/css/compat.css
@@ -897,11 +897,6 @@ ul.postingbuttons li
 	margin-bottom: .5em;
 }
 
-#verification_control, #verification_control .smalltext
-{
-	display: inline;
-}
-
 #quickReplyWarning
 {
 	width: 20%;
